# al-symbols-mcp-rust

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: auto-tag.yml  release.yml
src/: al_cli.rs  al_scanner.rs  app_parser.rs  database.rs  main.rs  manifest.rs  package_manager.rs  server.rs  symbol_parser.rs  types.rs
