[package]
name = "al-symbols-mcp"
version = "0.3.1"
edition = "2021"
description = "High-performance MCP Server for AL (Business Central) dependency analysis"
license = "MIT"

[[bin]]
name = "al-symbols-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
zip = "2"
quick-xml = "0.37"
walkdir = "2"
glob = "0.3"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
semver = "1"
rayon = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
